# OWC_Scripts

./: .gitignore  README.md  decode.py  filerate.py  pico.c  plot_ppm.py  ppm.py  texte_ppm.py  vppm.py
Arduino/emetteur/: emetteur.ino
Arduino/recepteur/: recepteur.ino
pico-c/: CMakeLists.txt  adc-noqueue.c  adc.c  mcpread.c  test.c  wifi_test.c
